 * CrossEntropyImportanceSampling (openturns.experimental)
 * PhysicalSpaceCrossEntropyImportanceSampling (openturns.experimental)
 * StandardSpaceCrossEntropyImportanceSampling (openturns.experimental)
 * CrossEntropyResult (openturns.experimental)
 * LeastSquaresExpansion, IntegrationExpansion (openturns.experimental)
 * UniformOverMesh (openturns.experimental)

==== API changes ====
 * Deprecated LinearLeastSquaresCalibration::getCandidate, use getStartingPoint
 * Deprecated NonLinearLeastSquaresCalibration::getCandidate, use getStartingPoint
 * Deprecated GaussianLinearCalibration::getCandidate, use getParameterMean
 * Deprecated NonGaussianLinearCalibration::getCandidate, use getParameterMean
 * Removed SequentialStrategy
 * Removed TensorApproximationAlgorithm, TensorApproximationResult, CanonicalTensorEvaluation, CanonicalTensorGradient
 * Removed FunctionalChaosSobolIndices.getSobolGrouped(Total)Index(int)
 * Removed FunctionalChaosSobolIndices::summary
 * Removed CorrelationAnalysis::PearsonCorrelation|SpearmanCorrelation|PCC|PRCC
 * Removed Distribution.getStandardMoment
 * Removed deprecated LinearModelAlgorithm | LinearModelStepwiseAlgorithm ctors
 * Removed FunctionalChaosAlgorithm(Function) ctors
 * Removed MetaModelResult(Function, Function, ...) ctor
 * Removed FunctionalChaosResult.getComposedModel, MetaModelResult.getModel and associated attributes for 1.21
 * Removed FunctionalChaosResult Function ctor
 * Removed (Process)Sample::computeCenteredMoment
 * Removed Distribution::getCenteredMoment
 * Removed IterativeMoments::getCenteredMoments
 * Removed GeneralLinearModelAlgorithm | KrigingAlgorithm ctors
 * Removed Drawable.draw|clean & Graph.draw|clean|getRCommand|makeR*|GetExtensionMap methods
 * Removed Sample.storeToTemporaryFile|streamToRFormat methods
 * Removed GaussianProcess.GIBBS
 * Deprecated DomainIntersection|Union|DisjunctiveUnion(Domain, Domain) ctors
 * KrigingResult.getTrendCoefficients now returns a single Point