@@ -57,6 +57,7 @@ ot_add_source_file (GammaFactory.cxx)
 ot_add_source_file (GammaMuSigma.cxx)
 ot_add_source_file (GeneralizedExtremeValue.cxx)
 ot_add_source_file (GeneralizedExtremeValueFactory.cxx)
+ot_add_source_file (GeneralizedExtremeValueValidation.cxx)
 ot_add_source_file (LikelihoodResult.cxx)
 ot_add_source_file (ProfileLikelihoodResult.cxx)
 ot_add_source_file (TimeVaryingResult.cxx)
@@ -225,6 +226,7 @@ ot_install_header_file (Gamma.hxx)
 ot_install_header_file (GammaMuSigma.hxx)
 ot_install_header_file (GeneralizedExtremeValue.hxx)
 ot_install_header_file (GeneralizedExtremeValueFactory.hxx)
+ot_install_header_file (GeneralizedExtremeValueValidation.hxx)
 ot_install_header_file (LikelihoodResult.hxx)
 ot_install_header_file (ProfileLikelihoodResult.hxx)
 ot_install_header_file (TimeVaryingResult.hxx)
