@@ -474,6 +474,7 @@ ot_pyinstallcheck_test (Gamma_std)
 ot_pyinstallcheck_test (GammaFactory_std IGNOREOUT)
 ot_pyinstallcheck_test (GeneralizedExtremeValue_std)
 ot_pyinstallcheck_test (GeneralizedExtremeValueFactory_std IGNOREOUT)
+ot_pyinstallcheck_test (GeneralizedExtremeValueValidation_std IGNOREOUT)
 ot_pyinstallcheck_test (GeneralizedPareto_std)
 ot_pyinstallcheck_test (GeneralizedParetoFactory_std)
 ot_pyinstallcheck_test (Geometric_std)
