@@ -15,6 +15,7 @@
  * CrossEntropyResult (openturns.experimental)
  * LeastSquaresExpansion, IntegrationExpansion (openturns.experimental)
  * UniformOverMesh (openturns.experimental)
+ * GeneralizedExtremeValueValidation (openturns.experimental)
 
 ==== API changes ====
  * Deprecated LinearLeastSquaresCalibration::getCandidate, use getStartingPoint
